--- a/index.html
+++ b/index.html
@@ -7,6 +7,68 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="navbar">
+            <div class="logo">Header Logo</div>
+            <div class="links">
+                <ul>
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
+            </div>
+        </div>
+        <div class="lowerheader">
+            <div class="left">
+                <div class="maintitle">This website is awesome</div>
+                <div class="subtitle">
+                    This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+                </div>
+                <div class="topbutton">
+                    <button>Sign Up</button>
+                </div>
+            </div>
+            <div class="right">
+                <div class="image">
+                    <img src="/images/titleplaceholder.jpg" alt="this is a placeholder for an image">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="content">
+        <div class="title"></div>
+        <div class="cards">
+            <div class="card1">
+                <div class="picture"><img src="/images/cardplaceholder.jpg" alt="card picture placeholder"></div>
+                <div class="text">this is some subtext under an illustration or picture</div>
+            </div>
+            <div class="card2">
+                <div class="picture"><img src="/images/cardplaceholder.jpg" alt="card picture placeholder"></div>
+                <div class="text">this is some subtext under an illustration or picture</div>
+            </div>
+            <div class="card3">
+                <div class="picture"><img src="/images/cardplaceholder.jpg" alt="card picture placeholder"></div>
+                <div class="text">this is some subtext under an illustration or picture</div>
+            </div>
+            <div class="card4">
+                <div class="picture"><img src="/images/cardplaceholder.jpg" alt="card picture placeholder"></div>
+                <div class="text">this is some subtext under an illustration or picture</div>
+            </div>
+        </div>
+    </div>
+    <div class="quote">
+        <div class="testimonial"></div>
+        <div class="credit"></div>
+    </div>
+    <div class="calltoaction">
+        <div class="heading">Call to action! it's time!</div>
+        <div class="text">Sign up for our product by clicking that button right over there!</div>
+        <div class="bottombutton">
+            <button>Sign Up</button>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="copyright">Copyright &#169; The Odin Project 2021</div>
+    </div>
 </body>
 </html>
