--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
         </div>
     </div>
     <div class="quote">
-        <div class="testimonial"></div>
-        <div class="credit"></div>
+        <div class="testimonial">
+            This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice
+        </div>
+        <div class="credit">-Thor, God of Thunder</div>
     </div>
     <div class="calltoaction">
         <div class="heading">Call to action! it's time!</div>
