--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <div class="logo">Header Logo</div>
             <div class="links">
                 <ul>
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
+                    <li><a href="linkone.html">header link one</a></li>
+                    <li><a href="linktwo.html">header link two</a></li>
+                    <li><a href="linkthree.html">header link three</a></li>
                 </ul>
             </div>
         </div>
@@ -25,33 +25,35 @@
                     This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
                 </div>
                 <div class="topbutton">
-                    <button>Sign Up</button>
+                    <div class="button"><a href="signup.html">Sign Up</a></div>
                 </div>
             </div>
             <div class="right">
                 <div class="image">
-                    <img src="/images/titleplaceholder.jpg" alt="this is a placeholder for an image">
+                    <img src="images/titleplaceholder.jpg" alt="this is a placeholder for an image" height="200" width="400">
                 </div>
             </div>
         </div>
     </div>
     <div class="content">
-        <div class="title"></div>
+        <div class="cardtitle">
+            <div id="1">Some random information.</div>
+        </div>
         <div class="cards">
             <div class="card1">
-                <div class="picture"><img src="/images/cardplaceholder.jpg" alt="card picture placeholder"></div>
+                <div class="picture"><img src="images/cardplaceholder.jpg" width="200px" alt="card picture placeholder"></div>
                 <div class="text">this is some subtext under an illustration or picture</div>
             </div>
             <div class="card2">
-                <div class="picture"><img src="/images/cardplaceholder.jpg" alt="card picture placeholder"></div>
+                <div class="picture"><img src="images/cardplaceholder.jpg" width="200px" alt="card picture placeholder"></div>
                 <div class="text">this is some subtext under an illustration or picture</div>
             </div>
             <div class="card3">
-                <div class="picture"><img src="/images/cardplaceholder.jpg" alt="card picture placeholder"></div>
+                <div class="picture"><img src="images/cardplaceholder.jpg" width="200px" alt="card picture placeholder"></div>
                 <div class="text">this is some subtext under an illustration or picture</div>
             </div>
             <div class="card4">
-                <div class="picture"><img src="/images/cardplaceholder.jpg" alt="card picture placeholder"></div>
+                <div class="picture"><img src="images/cardplaceholder.jpg" width="200px" alt="card picture placeholder"></div>
                 <div class="text">this is some subtext under an illustration or picture</div>
             </div>
         </div>
@@ -64,9 +66,9 @@
     </div>
     <div class="calltoaction">
         <div class="heading">Call to action! it's time!</div>
-        <div class="text">Sign up for our product by clicking that button right over there!</div>
+        <div class="text1">Sign up for our product by clicking that button right over there!</div>
         <div class="bottombutton">
-            <button>Sign Up</button>
+            <div class="button"><a href="signup.html">Sign Up</a></div>
         </div>
     </div>
     <div class="footer">
